[project]
name = "erix025-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.8.2",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.14",
    "mkdocs-statistics-plugin>=0.1.4",
    "pymdown-extensions>=10.16",
]

